--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "http-errors": "^1.7.3",
     "nodemon": "^2.0.2"
   }
 }
