--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "keywords": [
     "nodeJS",
@@ -17,6 +17,9 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "http-errors": "^1.7.3",
-    "nodemon": "^2.0.2"
+    "mongoose": "^5.9.9",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.2",
+    "uuid": "^7.0.3"
   }
 }
